--- a/typeseam/templates/index.html
+++ b/typeseam/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello World</title>
+  <title>Clean Slate SF Applications</title>
   <link rel="stylesheet" type="text/css" href="/static/css/main.css">
 </head>
 <body>
