--- a/typeseam/templates/index.html
+++ b/typeseam/templates/index.html
@@ -8,42 +8,55 @@
   <header>
     <div class="container">
 
-    <h3>FORM TITLE</h3>
-    <h1 id="{{ form.id }}">{{ form.title }}</h1>
-    <div class="form_data">
-      <ul class="form_nav">
-        <li class="form_nav_item">
-          <a class="btn btn-default" href="{{ form.live_url }}" target="_blank">View live form</a>
-        </li>
-        <li class="form_nav_item">
-          <a class="btn btn-default" href="{{ form.edit_url }}">Edit form</a>
-        </li>
-      </ul>
-    </div>
-    </div>
-  </header>
-    <div class="container">
+      <h3>FORM TITLE</h3>
+      <h1 id="{{ form.id }}">{{ form.title }}</h1>
+      <div class="form_data">
+        <ul class="form_nav">
+          <li class="form_nav_item">
+            <a class="btn btn-default" href="{{ form.live_url }}" target="_blank">
+              <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+              View live form</a>
+            </li>
+            <li class="form_nav_item">
+              <a class="btn btn-default" href="{{ form.edit_url }}">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                Edit form</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </header>
 
-  <table class="table">
-    <caption>
-      <h3>
-        Form responses
-      </h3>
-      <button class="btn btn-primary load_new_responses">
-      <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
-      Check for new responses</button>
-    </caption>
-    <thead>
-      <tr>
-        <th>Received</th>
-        <th>PDF</th>
-      </tr>
-    </thead>
-    <tbody class="responses">
-      {% include "response_list.html" %}
-    </tbody>
-  </table>
-</div>
-  <script src="/static/js/main.js"></script>
-</body>
-</html>
+      <div class="container">
+        <div class="responses-header">
+          <h3>
+            Form responses
+          </h3>
+          <div class="reponses-actions">
+            <button class="btn btn-primary load_new_responses">
+              <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+              Check for new responses
+            </button>
+            <a class="btn btn-default" href="/responses.csv">
+              <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+              Download .csv
+            </a>
+          </div>
+        </div>
+        <table class="table">
+          <caption>
+          </caption>
+          <thead>
+            <tr>
+              <th>Received</th>
+              <th>PDF</th>
+            </tr>
+          </thead>
+          <tbody class="responses">
+            {% include "response_list.html" %}
+          </tbody>
+        </table>
+      </div>
+      <script src="/static/js/main.js"></script>
+    </body>
+    </html>
