detail view and html refactoring

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -10,6 +10,9 @@
   max-width: 40em;
 }
 
+// breadcrumbs
+.breadcrumb .current { color: @text-color; }
+
 // states
 .stateful .state { display: none; }
 .untouched .state.content_default { display: inline; }
