--- a/typeseam/templates/index.html
+++ b/typeseam/templates/index.html
@@ -1,62 +1,41 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Clean Slate SF Applications</title>
-  <link rel="stylesheet" type="text/css" href="/static/css/main.css">
-</head>
-<body>
-  <header>
+{% extends "base.html" %}
+
+{% block body %}
+{% include "form_header.html" %}
+
     <div class="container">
+      {% block main %}
 
-      <h3>FORM TITLE</h3>
-      <h1 id="{{ form.id }}">{{ form.title }}</h1>
-      <div class="form_data">
-        <ul class="form_nav">
-          <li class="form_nav_item">
-            <a class="btn btn-default" href="{{ form.live_url }}" target="_blank">
-              <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-              View live form</a>
-            </li>
-            <li class="form_nav_item">
-              <a class="btn btn-default" href="{{ form.edit_url }}">
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                Edit form</a>
-              </li>
-            </ul>
-          </div>
+      <div class="responses-header">
+        <h3>
+          Form responses
+        </h3>
+        <div class="reponses-actions">
+          <button class="btn btn-primary load_new_responses">
+            <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+            Check for new responses
+          </button>
+          <a class="btn btn-default" href="/responses.csv">
+            <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+            Download .csv
+          </a>
         </div>
-      </header>
-
-      <div class="container">
-        <div class="responses-header">
-          <h3>
-            Form responses
-          </h3>
-          <div class="reponses-actions">
-            <button class="btn btn-primary load_new_responses">
-              <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
-              Check for new responses
-            </button>
-            <a class="btn btn-default" href="/responses.csv">
-              <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
-              Download .csv
-            </a>
-          </div>
-        </div>
-        <table class="table">
-          <caption>
-          </caption>
-          <thead>
-            <tr>
-              <th>Received</th>
-              <th>PDF</th>
-            </tr>
-          </thead>
-          <tbody class="responses">
-            {% include "response_list.html" %}
-          </tbody>
-        </table>
       </div>
-      <script src="/static/js/main.js"></script>
-    </body>
-    </html>
+
+      <table class="table">
+        <caption>
+        </caption>
+        <thead>
+          <tr>
+            <th>Received</th>
+            <th>PDF</th>
+          </tr>
+        </thead>
+        <tbody class="responses">
+          {% include "response_list.html" %}
+        </tbody>
+      </table>
+
+      {% endblock main %}
+    </div>
+{% endblock body %}
