further tests & test setup

--- a/typeseam/templates/base.html
+++ b/typeseam/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {% include "head.html" %}
+    {% include "includes/head.html" %}
     <link rel="stylesheet" type="text/css" href="/static/css/main.css">
   </head>
   <body>
