more login and logout tests

--- a/typeseam/templates/auth/login.html
+++ b/typeseam/templates/auth/login.html
@@ -6,7 +6,9 @@
     Login Form
   </h1>
   <form action="{{ url_for('auth.login') }}" method="POST">
-    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+
+    {% include "includes/csrf_field.html" %}
+    {% include "includes/next_field.html" %}
     <input type="email" name="email">
 
     <input type="password" name="password">
