--- a/typeseam/templates/index.html
+++ b/typeseam/templates/index.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 
 {% block body %}
+{% include "includes/flash_messages.html" %}
 {% include "form_header.html" %}
 
     <div class="container">
       {% block main %}
+
+
 
       <div class="responses-header">
         <h3>
