added lots more tests, refactored for new user accounts

--- a/typeseam/templates/base.html
+++ b/typeseam/templates/base.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     {% block body %}
-    {% include "includes/flash_messages.html" %}
+    {% include "includes/header.html" %}
 
     {% block main %}{% block content %}{% endblock %}{% endblock %}
     {% endblock body %}
