--- a/typeseam/templates/form_header.html
+++ b/typeseam/templates/form_header.html
@@ -1,4 +1,4 @@
-    <header>
+<div class="form_header">
       <div class="container">
         <div class="form_overview">
           <h3>FORM TITLE</h3>
@@ -19,4 +19,5 @@
           </ul><!-- end form_nav -->
         </div><!-- end form_overview -->
       </div><!-- end container -->
-    </header>
+
+</div>
