--- a/typeseam/templates/responses.html
+++ b/typeseam/templates/responses.html
@@ -10,6 +10,22 @@
     <div class="container">
     {% block main %}
 
+     <div class="responses-header">
+        <h3>
+          Form responses
+        </h3>
+        <div class="reponses-actions">
+          <button class="btn btn-primary load_new_responses">
+            <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+            Check for new responses
+          </button>
+          <a class="btn btn-default" href="{{ url_for('form_filler.responses_csv', typeform_key=form.form_key) }}">
+            <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+            Download .csv
+          </a>
+        </div>
+      </div>
+
       <table class="table">
         <thead>
           <tr>
