improved response loading and UI error display, closes #6

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -16,6 +16,7 @@
 // states
 .stateful .state { display: none; }
 .stateful.default .state.content_default { display: inline; }
+.stateful.error .state.content_error { display: inline; }
 .stateful.sending .state.content_sending { display: inline; }
 .stateful.generating .state.content_generating { display: inline; }
 .stateful.retrieving .state.content_retrieving { display: inline; }
