--- a/typeseam/templates/form_header.html
+++ b/typeseam/templates/form_header.html
@@ -4,18 +4,22 @@
           <h3>FORM TITLE</h3>
           <h1 id="{{ form.id }}">{{ form.title }}</h1>
           <ul class="form_nav">
+            {%- if form.live_url %}
             <li class="form_nav_item">
               <a class="btn btn-default" href="{{ form.live_url }}" target="_blank">
                 <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                 View live form
               </a>
             </li>
+            {% endif %}
+            {%- if form.edit_url %}
             <li class="form_nav_item">
               <a class="btn btn-default" href="{{ form.edit_url }}">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 Edit form
               </a>
             </li>
+            {% endif %}
           </ul><!-- end form_nav -->
         </div><!-- end form_overview -->
       </div><!-- end container -->
