--- a/typeseam/templates/includes/header.html
+++ b/typeseam/templates/includes/header.html
@@ -4,14 +4,14 @@
         <!-- TO DO: show navigation breadcrumbs in a mobile-friendly way -->
         {% if current_user.is_authenticated %}
         <div class="auth-notice authenticated">
-          <span class="message">Logged in as</span>
+          <span class="message">Signed in as</span>
           <span class="username">{{ current_user.email }}</span>
-          <a href="{{ url_for('user.logout') }}" class="logout_link">Log out</a>
+          <a href="{{ url_for('user.logout') }}" class="logout_link">Sign out</a>
         </div>
         {% else %}
         <div class="auth-notice not-authenticated">
-          <span class="message">Not logged in</span>
-          <a href="{{ url_for('user.login') }}" class="login_link">Log in</a>
+          <span class="message">Not signed in</span>
+          <a href="{{ url_for('user.login') }}" class="login_link">Sign in</a>
         </div>
         {% endif %}
       </div> <!-- end top_bar -->
