add auth bar to splash page footer

--- a/typeseam/templates/includes/footer.html
+++ b/typeseam/templates/includes/footer.html
@@ -3,4 +3,5 @@
     <span class="footer_website_description"> {{ linkify(content.footer_website_description) }}</span>
     <span class="footer_legal">{{ linkify(content.footer_legal) }}</span>
   </p>
+  {% include "includes/auth_bar.html" %}
 </section>
