add second action button and remove url_for

--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -60,6 +60,13 @@
 
 <section class="apply_backup container">
   <h3 class="backup_apply_headline">{{ content.backup_apply_headline }}</h3>
+
+  <a href="/sanfrancisco/" class="btn btn-primary btn-lg call_to_action_button">
+    <span class="main-action-text">
+      {{ content.call_to_action_button }}
+    </span>
+  </a>
+
   <ul class="opportunities">
     <li class="opportunity">{{ content.opportunity_1 }}</li>
     <li class="opportunity">{{ content.opportunity_2 }}</li>
