--- a/typeseam/templates/includes/footer.html
+++ b/typeseam/templates/includes/footer.html
@@ -1,7 +1,7 @@
-<section class="footer container">
-  <p class="footer_statement">
-    <span class="footer_website_description"> {{ linkify(content.footer_website_description) }}</span>
-    <span class="footer_legal">{{ linkify(content.footer_legal) }}</span>
-  </p>
+<section class="footer container new_section">
+  <div class="footer_statement">
+    <p class="footer_website_description"> {{ linkify(content.footer_website_description) }}</p>
+    <p class="footer_legal">{{ linkify(content.footer_legal) }}</p>
+  </div>
   {% include "includes/auth_bar.html" %}
 </section>
