--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -7,66 +7,79 @@
 {% include "includes/splash_header.html" %}
 
     {% block main %}
+    <div class="row">
+      <div class="col-sm-12">
+        <h1 class="main_headline new_section">
+          {{ content.main_headline }}
+        </h1>
 
-      <h1 class="main_headline">
-        {{ content.main_headline }}
-      </h1>
+        <h3 class="subheadline">
+          {{ content.subheadline }}
+        </h3>
 
-      <h4 class="subheadline">
-        {{ content.subheadline }}
-      </h4>
+        <p class="call_to_action_time">
+          {{ content.call_to_action_time }}
+        </p>
 
-      <a href="/sanfrancisco/" class="btn btn-primary btn-lg call_to_action_button">
-        <span class="main-action-text">
-          {{ content.call_to_action_button }}
-        </span>
-      </a>
+        <a href="/sanfrancisco/" class="btn btn-primary btn-lg call_to_action_button text-center">
+          <span class="main-action-text">
+            {{ content.call_to_action_button }}
+          </span>
+        </a>
 
-      <p class="credibility_note">{{ content.credibility_note }}</p>
+        <p class="credibility_note small">{{ content.credibility_note }}</p>
+      </div>
+    </div>
 
     {% endblock main %}
 </section>
 
 <section class="about_the_service container">
 
-  <div class="gov_service">
-    <h3 class="gov_service_name">
-      {{ content.gov_service_name }}
-    </h3>
-    <p class="gov_service_description">
-      {{ content.gov_service_description }}
-    </p>
-  </div>
-
-  <div class="journey_steps">
-    <h3 class="journey_headline">{{ content.journey_headline }}</h3>
-    <div class="step">
-      <h4 class="step_headline">{{ content.step_1_headline }}</h4>
-      <p class="step_paragraph">{{ content.step_1_paragraph }}</p>
-    </div>
-    <div class="step">
-      <h4 class="step_headline">{{ content.step_2_headline }}</h4>
-      <p class="step_paragraph">{{ content.step_2_paragraph }}</p>
-    </div>
-    <div class="step">
-      <h4 class="step_headline">{{ content.step_3_headline }}</h4>
-      <p class="step_paragraph">{{ content.step_3_paragraph }}</p>
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="gov_service new_section">
+        <h2 class="gov_service_name">
+          {{ content.gov_service_name }}
+        </h2>
+        <p class="gov_service_description">
+          {{ content.gov_service_description }}
+        </p>
+      </div>
     </div>
   </div>
 
-  <p class="time_expectation">{{ content.time_expectation }}</p>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="journey_steps new_section">
+        <h2 class="journey_headline">{{ content.journey_headline }}</h2>
+        <div class="step">
+          <p class="step_paragraph"> <strong>{{ content.step_1_headline }}</strong> {{ content.step_1_paragraph }}</p>
+        </div>
+        <div class="step">
+          <p class="step_paragraph"> <strong>{{ content.step_2_headline }}</strong> {{ content.step_2_paragraph }}</p>
+        </div>
+        <div class="step">
+          <p class="step_paragraph"> <strong>{{ content.step_3_headline }}</strong> {{ content.step_3_paragraph }}</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-6">
+      <h3 class="time_expectation">{{ content.time_expectation }}</h3>
+    </div>
+  </div>
 
 </section>
 
-<section class="apply_backup container">
-  <h3 class="backup_apply_headline">{{ content.backup_apply_headline }}</h3>
-
-  <a href="/sanfrancisco/" class="btn btn-primary btn-lg call_to_action_button">
+<section class="apply_backup container new_section">
+  <h2 class="backup_apply_headline">{{ content.backup_apply_headline }}</h2>
+  <a href="/sanfrancisco/" class="btn btn-primary btn-lg call_to_action_button text-center">
     <span class="main-action-text">
       {{ content.call_to_action_button }}
     </span>
   </a>
-
+  
   <ul class="opportunities">
     <li class="opportunity">{{ content.opportunity_1 }}</li>
     <li class="opportunity">{{ content.opportunity_2 }}</li>
