--- a/typeseam/templates/base.html
+++ b/typeseam/templates/base.html
@@ -11,10 +11,12 @@
 
     {% block main %}{% block content %}{% endblock %}{% endblock %}
     {% endblock body %}
-    <script>
-    {% block js_variables %}
-    {% endblock js_variables %}
-    </script>
-    <script src="{{ static_url }}js/main.js"></script>
+    {% block scripts %}
+      <script>
+      {% block js_variables %}
+      {% endblock js_variables %}
+      </script>
+      <script src="{{ static_url }}js/main.js"></script>
+    {% endblock %}
   </body>
 </html>
