--- a/typeseam/templates/includes/footer.html
+++ b/typeseam/templates/includes/footer.html
@@ -1,7 +1,11 @@
-<section class="footer container new_section">
-  <div class="footer_statement">
-    <p class="footer_website_description"> {{ linkify(content.footer_website_description) }}</p>
-    <p class="footer_legal">{{ linkify(content.footer_legal) }}</p>
+<section class="footer new_section">
+  <div class="container">
+    <div class="footer_statement">
+      <p class="footer_website_description"> {{ linkify(content.footer_website_description) }}</p>
+      <p class="footer_legal">{{ linkify(content.footer_legal) }}</p>
+    </div>
+    <div class="footer_logo">
+      <img class="cfa-logo" src="{{ static_url }}img/CfA_logo.png" alt="Code for America Logo">
+    </div>
   </div>
-  {% include "includes/auth_bar.html" %}
 </section>
