fix call to action button width

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -31,8 +31,9 @@ p.step_headline{
   font-weight: 600;
 }
 
-.btn-lg{
-  width: 370px;
+.call_to_action_button {
+  width: 100%;
+  max-width: 20em;
 }
 
 .new_section{
@@ -182,18 +183,16 @@ iframe {
     text-align: center;
   }
 
-}
-
-@media (min-width: @screen-sm-min) {
   .above_the_fold {
     background-image: url("/static/img/CMR-hero.png");
     background-size: cover;
     height: 30em;
   }
+
 }
+
 @media (min-width: @screen-md-min) {
   .above_the_fold {
     height: 36em;
   }
-
 }
