--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -1,3 +1,7 @@
+.top_bar a {
+  color: inherit;
+  text-decoration: none;
+}
 
 h1{
   font-size:42px;
@@ -42,16 +46,15 @@ p.step_headline{
 
 .container {
   margin: 0 auto;
-  max-width: 40em;
   padding-bottom: 20px;
 }
 
 
-.about_the_service{
+.about_the_service {
   background-color: #ECF0F1;
 }
 
-.apply_backup{
+.apply_backup {
   background-color: #3498DB;
   color:#fff;
 }
@@ -87,6 +90,12 @@ p.step_headline{
 .footer_logo,
 .footer p {
   text-align: center;
+}
+
+.col_centered {
+  float: none;
+  margin: 0 auto;
+  max-width: 33em;
 }
 
 ul.opportunities {
@@ -195,4 +204,15 @@ iframe {
   .above_the_fold {
     height: 36em;
   }
+}
+
+.privacy_policy ul {
+  list-style-type: disc;
+}
+
+.typeform_wrapper {
+  height: 100%;
+}
+html, body {
+  height: 100%;
 }
