--- a/typeseam/templates/includes/splash_header.html
+++ b/typeseam/templates/includes/splash_header.html
@@ -3,7 +3,7 @@
     <header class="header">
       <div class="top_bar">
       <span class="topbar-content">
-        {{ content.topbar }}
+        <a href="{{ url_for('form_filler.index') }}">{{ content.topbar }}</a>
       </span>
       </div> <!-- end top_bar -->
     </header>
