--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -2,32 +2,37 @@
   color: inherit;
   text-decoration: none;
 }
-
-h1{
-  font-size:42px;
-  font-weight:600;
+p {
+  font-size: 18px;
+  font-weight: 500;
 }
 
-h1.main_headline{
+h1 {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+h1.main_headline {
   margin-bottom: 4px;;
 }
 
-h2{
-  font-size:28px;
-  margin-bottom:20px;
+h2 {
+  font-size: 26px;
+  margin-bottom: 20px;
+  font-weight: 700;
 }
 
-h3{
+h3 {
   font-size:22px;
 }
 
-h3.subheadline{
+h3.subheadline {
   margin-top:0;
   margin-bottom:40px;
 }
 
-h3.time_expectation{
-  font-weight:600;
+h2.time_expectation{
+  font-weight: 500;
   text-align: center;
 }
 
@@ -38,6 +43,12 @@ p.step_headline{
 .call_to_action_button {
   width: 100%;
   max-width: 20em;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+p.credibility_note {
+  padding-top: 70px;
 }
 
 .new_section{
@@ -46,7 +57,7 @@ p.step_headline{
 
 .container {
   margin: 0 auto;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
 }
 
 
@@ -59,9 +70,17 @@ p.step_headline{
   color:#fff;
 }
 
-.footer{
+.footer {
   background-color: #34495E;
+  color: #fff;
 }
+.footer a {
+  color: #3498D8;
+}
+.footer a:hover, .footer a:visited {
+  color: #3498D8;
+}
+
 .cfa-logo {
   width: 12em;
   opacity: 0.3;
@@ -100,12 +119,12 @@ p.step_headline{
 
 ul.opportunities {
   padding: 0;
-  padding-top:12px;
+  padding-top: 12px;
   text-align: left;
 }
 
 .opportunity {
-  padding-bottom:6px;
+  padding-bottom: 20px;
 }
 .opportunity:before {
   content: "\2713";
@@ -178,6 +197,8 @@ iframe {
 
   h1 {
     margin-top:80px;
+    font-size: 54px;
+    padding-top: 150px;
   }
 
   .new_section {
@@ -190,6 +211,7 @@ iframe {
 
   .opportunity, section.footer.container.new_section {
     text-align: center;
+    padding-bottom: 10px;
   }
 
   .above_the_fold {
