--- a/typeseam/templates/includes/splash_header.html
+++ b/typeseam/templates/includes/splash_header.html
@@ -2,7 +2,7 @@
 
     <header class="header">
       <div class="top_bar">
-      <span class="topbar-content">
+      <span class="topbar-content small">
         <a href="{{ url_for('form_filler.index') }}">{{ content.topbar }}</a>
       </span>
       </div> <!-- end top_bar -->
