add link to clean slate program

--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -42,7 +42,7 @@
       <div class="col-xs-12">
         <div class="gov_service new_section">
           <h2 class="gov_service_name">
-            {{ content.gov_service_name }}
+            {{ linkify(content.gov_service_name) }}
           </h2>
           <p class="gov_service_description">
             {{ content.gov_service_description }}
