privacy policy styles

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -57,18 +57,38 @@ p.credibility_note {
 
 .container {
   margin: 0 auto;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
 }
 
 
-.about_the_service {
+.about_the_service, .privacy_description {
   background-color: #ECF0F1;
 }
 
-.apply_backup {
+.apply_backup, .privacy_above_the_fold {
   background-color: #3498DB;
   color:#fff;
 }
+
+.privacy_above_the_fold h1{
+  padding-top:0;
+}
+
+.privacy_description{
+  padding-top:40px;
+  padding-bottom:40px;
+}
+
+.privacy_description li{
+  padding-bottom: 20px;
+}
+
+.privacy_description ul{
+  list-style-type: circle;
+}
+
+
+
 
 .footer {
   background-color: #34495E;
@@ -114,7 +134,7 @@ p.credibility_note {
 .col_centered {
   float: none;
   margin: 0 auto;
-  max-width: 33em;
+  max-width: 40em;
 }
 
 ul.opportunities {
@@ -166,6 +186,11 @@ iframe {
 .loading .glyphicon-refresh {
    -webkit-animation: fa-spin 2s infinite linear;
   animation: fa-spin 2s infinite linear;
+}
+
+
+.privacy_policy{
+
 }
 
 @-webkit-keyframes fa-spin {
