Changed hero section design
Aligned text left, darker background photo, text color is white,
credibility next is aligned left

--- a/frontend/less/variables.less
+++ b/frontend/less/variables.less
@@ -148,7 +148,7 @@
 @btn-default-bg:                 #fff;
 @btn-default-border:             #ccc;
 
-@btn-primary-color:              #000;
+@btn-primary-color:              #004C77;;
 @btn-primary-bg:                 #F1C40F;
 @btn-primary-border:             darken(@btn-primary-bg, 5%);
 
