add chat support again

--- a/typeseam/templates/base.html
+++ b/typeseam/templates/base.html
@@ -20,6 +20,7 @@
     {% endblock %}
 
   {% include "includes/google_analytics.html" %}
+  {% include "includes/intercom.html" %}
 
 </body>
 </html>
