WIP: replacing Tyepform

--- a/typeseam/templates/thanks.html
+++ b/typeseam/templates/thanks.html
@@ -5,7 +5,7 @@
 {% include "includes/splash_header.html" %}
 
 <div class="container">
-	{% include "forms/sanfrancisco.html" %}
+	<h1>Thanks for applying!</h1>
 </div>
 
 {% endblock body %}
