--- a/frontend/less/main.less
+++ b/frontend/less/main.less
@@ -20,4 +20,6 @@
 @import "../../node_modules/bootstrap/less/utilities.less";
 @import "../../node_modules/bootstrap/less/responsive-utilities.less";
 
+@import "forms.less";
+
 @import "custom.less";
